# cp2077jobs

./: dl_jobs.py  jobs.json  pyproject.toml  quests_table.html  sandbox.py
html/: (Don%27t_Fear)_The_Reaper.html  (Don't Fear) The Reaper.html  A Cool Metal Fire.html  A Day In The Life.html  A Like Supreme (quest).html  A_Cool_Metal_Fire.html  A_Day_In_The_Life.html  A_Like_Supreme_(quest).html  Addicted To Chaos.html  Addicted_To_Chaos.html  All Along the Watchtower.html  All_Along_the_Watchtower.html  Automatic Love.html  Automatic_Love.html  Baby Let Me Take You.html  Baby_Let_Me_Take_You.html  Balls to the Wall.html  Balls_to_the_Wall.html  Beat on the Brat.html  Beat on the Brat: Arroyo.html  Beat on the Brat: Kabuki.html  Beat on the Brat: Pacifica.html  Beat on the Brat: Rancho Coronado.html  Beat on the Brat: The Glen.html  Beat_on_the_Brat.html  Beat_on_the_Brat:_Arroyo.html  Beat_on_the_Brat:_Kabuki.html  Beat_on_the_Brat:_Pacifica.html  Beat_on_the_Brat:_Rancho_Coronado.html  Beat_on_the_Brat:_The_Glen.html  Belly of the Beast.html  Belly_of_the_Beast.html  Big in Japan.html  Big_in_Japan.html  Birds with Broken Wings.html  Birds_with_Broken_Wings.html  Black Steel In The Hour of Chaos.html  Black_Steel_In_The_Hour_of_Chaos.html  Blistering Love.html  Blistering_Love.html  (+637 more)
src/cp2077jobs/: models.py  settings.py
src/cp2077jobs/commands/: import_jobs.py  scrap_wiki.py
